# ip-server

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: cd.yml  ci.yml  docker.yml
cargo/: Dockerfile
cd/cargo/: publish.sh  run.sh
cd/test/: test-server-client.sh
ci/: ci-default.sh  ci.sh  docker-compose.yml  get-metadata.sh  update.sh
ci/cargo/: Dockerfile  publish-test.sh  publish.sh  run.sh
ci/cargo/install/: Dockerfile
ci/cargo/publish/: Dockerfile  publish.sh
ci/deb/: Dockerfile  package-test.sh  package.sh
ci/docker/: Dockerfile  action.yml  build-and-push.sh  docker-compose-test.sh  docker-compose.yml  publish.sh  run.sh  test-server-client.sh
ci/test/: test-server-client.sh
src/: client.rs  main.rs  options.rs  server.rs
